clusters/talos-ottawa/apps/immich/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: immich
  annotations:
    item.homer.rajsingh.info/name: "Immich"
    item.homer.rajsingh.info/subtitle: "Photo & Video Management"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/immich.svg"
    item.homer.rajsingh.info/keywords: "photos, videos, backup"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "immich.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
